--- a/styles.css
+++ b/styles.css
@@ -16,9 +16,7 @@ h1 {
     font-family: Helvetica, sans-serif;
 }
 
-.spag-content,
-.smoothie-content,
-.panzanella-content {
+#page-content {
     font-size: 16px;
     font-family: Helvetica, sans-serif;
 }
