--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/*Simple styles :) */
+
 body {
     background-color: tan;
 }
@@ -18,7 +20,7 @@ h1 {
 
 #page-content {
     font-size: 16px;
-    font-family: Helvetica, sans-serif;
+    font-family: Helvetica, sans-serif; 
 }
 
 #return-button {
